<resources>
    <string name="app_name">Scalar</string>

    <!-- Login -->
    <string name="welcome">Welcome to\nScalar</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="description_wallet">Send and receive Grin.\nThe easy way.</string>

    <!-- Create Account -->
    <string name="create_account_title">Grin Account Creation</string>
    <string name="create_account_intro">We\'re so glad you are a believer of Grin. Electronic
        transactions for all. Without censorship or restrictions.\n\nTo create a wallet, you will
        generate a secret seed and a password. They will let you interact with the Grin blockchain.
        \n\nNote we only temporarily store your wallet information, please make sure to back up your
        wallet information.
    </string>
    <string name="recovery_phrase_title">Recovery Phrase</string>
    <string name="recovery_phrase_description">A recovery phrase is a series of 15 easy to remember
        words in a specific order. This word combination is unique to your wallet.\n\nPlease have
        a pen and paper ready so you can write it down. Screenshots or digitally saved phrases
        are easier to be hacked.
    </string>
    <string name="recovery_phrase_info_text">Please carefully write down the following words in the right order.</string>
    <string name="written_down_text">I have written it down</string>
    <string name="wallet_intro_text">Gringotts, the wizard bank! Ain\'t no safer place. Not one. Except perhaps Hogwarts.\n\nHagrid said it best, so we\'ll leave it at that.</string>
    <string name="wallet_ready_text">Your wallet is ready</string>

    <!-- Create Account Credentials -->
    <string name="create_account_email_title">Email</string>'
    <string name="create_account_password_title">Password</string>
    <string name="create_account_create_button_text">Create Account</string>

    <!-- Import Account -->
    <string name="import_title">Enter your recovery phrase</string>
    <string name="explain_import_text">Please enter your 15 word recovery phrase to import your wallet.</string>
    <string name="import_text">Import</string>
    <string name="recovery_phrase_alphabet">abcdefghijklmnopqrstuvwxyz\u0020</string>

    <!-- Home Screen -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty_transactions_list">Looks like nothing\'s here</string>


    <!-- Common Button Strings -->
    <string name="ready">I\'m ready</string>
    <string name="start">Start</string>
    <string name="next">Next</string>


    <!-- Content Descriptors -->
    <string name="check_mark">Check mark</string>
    <string name="logo_description">Scalar</string>

</resources>
