<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="48dp"
    tools:context=".ui.activities.LoginActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleText"
        android:text="@string/welcome" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubtitleText"
        android:text="@string/description_wallet" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createWalletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_wallet"
        android:layout_marginTop="@dimen/margin"
        style="@style/PrimaryButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/importWalletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_wallet"
        style="@style/AlternatePrimaryButton"
        android:layout_marginTop="@dimen/margin"/>

</LinearLayout>
