<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.importwallet.ImportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_title"
        style="@style/ActivityTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_import_text"
        style="@style/RegularTextView" />

    <EditText
        android:id="@+id/phraseEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:digits="@string/recovery_phrase_alphabet"
        android:inputType="textFilter"
        style="@style/RegularTextView"
        android:background="@drawable/text_input_background"
        android:padding="@dimen/padding"
        android:textSize="@dimen/text_size_medium"
        android:gravity="top"
        android:textCursorDrawable="@drawable/cursor"/>

    <Button
        android:id="@+id/createWalletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_text"
        style="@style/PrimaryButton" />

</LinearLayout>