<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateAccountActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_title"
        style="@style/ActivityTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_intro"
        style="@style/ParagraphText" />

    <Button
        android:id="@+id/importWalletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        style="@style/PrimaryButton" />

</LinearLayout>
